[package]
name = "xv6"
version = "0.1.0"
authors = ["TODO"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitfield = "0.13.2"
spin = "0.9.2"
raw-cpuid = {version = "10.2.0", features=["target-x86-has-cpuid"]}
x86 = "0.46.0"

[patch.crates-io]
raw-cpuid = { git = "https://github.com/AustinMReppert/rust-cpuid/", branch = "master" }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
